# AlgorithmenUndDatenstrukturen

./: README.md  pyproject.toml
Algorithmen/: dijkstra.py  tsmp.py
Aufgaben/: a_14_popko.py  a_1_1.py  a_1_1_fibonacci.py  a_1_1_kevin.py  a_1_1_popko.py  a_1_2.py  a_1_2_bubblesort.py  a_1_2_kevin.py  a_2.py  a_2_copilot.py
