[project]
name = "algorithmenunddatenstrukturen"
version = "0.1.0"
description = "University project for algorithms and data structures"
requires-python = ">=3.14"
dependencies = [
    "numpy",
    "matplotlib",
    "pandas",
    "scikit-learn",
]

[dependency-groups]
dev = [
    "mypy",
    "ruff",
    "pytest",
    "scipy-stubs",
]
